template/k8s/busybox.yml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: busybox
  name: busybox
spec:
  automountServiceAccountToken: false
  containers:
  - image: busybox
    name: busybox
    command: [ "/bin/sh", "-c"]
    args: ["-c", "while true; do echo hello; sleep 10;done"]
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Never
