template/k8s/busyboxcurl.yml

apiVersion: v1
kind: Pod
metadata:
  name: busybox
spec:
  containers:
  - image: radial/busyboxplus:curl
    name:  busybox
    command: [ "/bin/sh", "-c"]
    args: ["-c", "while true; do echo hello; sleep 10;done"]
