template/k8s/deployment.yaml
# type metadata
apiVersion: extensions/v1beta1
kind: Deployment
# Object metadata
metadata:
  annotations:
  labels:
    app: value
  name: name
  namespace: ns
#What we expected to have
spec:
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: image-label
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: image-label 
status: {}
