template/k8s/exec-liveness.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    test: liveness
  name: liveness-exec
spec:
  containers:
  - name: liveness
    image: busybox
    args:
    - /bin/sh
    - -c
    - touch /tmp/healthy; sleep 30; rm -rf /tmp/healthy; sleep 600
    livenessProbe:
#ExecAction
      exec:
        command:
        - cat
        - /tmp/healthy
# init delay time before probe
      initialDelaySeconds: 5
# time between two check
      periodSeconds: 5
      successThreshold: 1
# how many times of failed check treat as a failure.
      failureThreshold: 3
      timeoutSeconds: 1
