template/k8s/nslookup.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox
spec:
 containers:
 - name: busybox
   image: busybox
   command:
    - sleep
    - "3600"
    
## kubectl exec busybox_nslookup -- nslookup <svc name>.<ns>
