template/k8s/pod_hostport.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-demo
spec:
  hostNetwork: false
  containers:
  - name: nginx-demo
    image: nginx
    ports:
    - containerPort: 80
      hostPort: 8080
  terminationGracePeriodSeconds: 60
