template/k8s/postStart_preStop_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: lifecycle-demo
spec:
  containers:
  - name: lifecycle-demo-container
    image: nginx
    terminationGracePeriodSeconds: 60
    lifecycle:
      postStart:
        exec:
          command: ["/bin/sh", "-c", "echo Hello from the postStart handler > /usr/share/message"]
 #preStop execute time should not longer than terminationGracePeriodSeconds
      preStop:
        exec:
          command: [“/usr/sbin/nginx","-s","quit"]
